--- a/main/template/reply_text.xml
+++ b/main/template/reply_text.xml
@@ -2,6 +2,6 @@
 <ToUserName><![CDATA[{{ toUser }}]]></ToUserName>
 <FromUserName><![CDATA[{{ fromUser }}]]></FromUserName>
 <CreateTime>{{ createTime }}</CreateTime>
-<MsgType><![CDATA[{{ msgType }}]></MsgType>
+<MsgType><![CDATA[text]></MsgType>
 <Content><![CDATA[{{ content }}]]></Content>
 </xml>
